fixed Client